deployed with installable pwa feature
customised logo
sitemap
fixed scrolling animation bug

--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<script>
+			(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+			})(window,document,'script','dataLayer','GTM-MWW3D8F');
+		</script>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="keywords" content="sauna, heat, relax, enjoy, sauna club, experience, relax experience, sauna experience">
+		<link rel="manifest" href="/manifest.json" crossorigin="use-credentials"/>
 		%svelte.head%
 	</head>
 	<body>
 		<div id="svelte">%svelte.body%</div>
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MWW3D8F"
+			height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 	</body>
 </html>
